# kafka-backup-operator

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: build-push.yml  docker-publish.yaml  helm-test.yaml  release-tagger.yaml  release-version-guard.yaml  release.yaml  sync-helm-chart.yaml  test.yaml
deploy/crds/: all.yaml
deploy/helm/kafka-backup-operator/: Chart.yaml  values.yaml
deploy/rbac/: role.yaml
docs/: ARCHIVED-PRD-azure-blob-storage-support.md  PRD-operator-azure-integration.md  PROGRESS.md  azure-workload-identity.md  prd.md  update.prd
minikube/: README.md  operator-patch.yaml
minikube/base/cfk-operator/: clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  kustomization.yaml  serviceaccount.yaml
minikube/base/confluent-platform/: kafka-topic.yaml
minikube/base/strimzi-kafka/: kafka-topic.yaml  kafka-user.yaml  kafka.yaml  kustomization.yaml
minikube/overlays/strimzi-tls/: backup-pvc.yaml  (+4 more)
minikube/scripts/: consume-messages.sh  setup-strimzi-tls.sh  setup.sh  teardown-strimzi-tls.sh  teardown.sh  verify-backup.sh  verify-strimzi-tls.sh
scripts/ci/: check-release-version.py
src/: error.rs  lib.rs  main.rs
src/adapters/: backup_config.rs  core_integration.rs  mod.rs  restore_config.rs  secrets.rs  storage_config.rs  tls_files.rs  validation_config.rs
src/controllers/: backup_controller.rs  mod.rs  offset_reset_controller.rs  offset_rollback_controller.rs  restore_controller.rs  validation_controller.rs
src/crd/: kafka_backup.rs  kafka_backup_validation.rs  kafka_offset_reset.rs  kafka_offset_rollback.rs  kafka_restore.rs  mod.rs
src/metrics/: mod.rs  prometheus.rs
src/reconcilers/: backup.rs  mod.rs  offset_reset.rs  offset_rollback.rs  restore.rs  retention.rs  validation.rs
tests/: issue48_repro.rs  issue49_repro.rs  reconciler_validation_tests.rs
(+14 files in other folders)
