[package]
name = "kafka-backup-operator"
version = "0.2.6"
edition = "2021"
authors = ["OSO DevOps <dev@oso.sh>"]
description = "Kubernetes Operator for OSO Kafka Backup"
license = "MIT"
repository = "https://github.com/osodevops/kafka-backup-operator"
readme = "README.md"
keywords = ["kubernetes", "operator", "kafka", "backup", "disaster-recovery"]
categories = ["command-line-utilities"]

[dependencies]
# Core backup library - v0.4.0 with TLS certificate fix (GitHub Issue #3)
kafka-backup-core = { git = "https://github.com/osodevops/kafka-backup.git", tag = "v0.8.2" }

# Kubernetes
kube = { version = "0.95", features = ["runtime", "derive", "client"] }
kube-runtime = "0.95"
k8s-openapi = { version = "0.23", features = ["v1_30"] }

# Async runtime
tokio = { version = "1.41", features = ["full", "signal"] }
tokio-util = "0.7"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Time
chrono = { version = "0.4", features = ["serde"] }
schemars = { version = "0.8", features = ["chrono"] }
cron = "0.12"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Metrics
prometheus = "0.13"
hyper = { version = "1.5", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# Schema generation (moved to Time section with chrono feature)

# Lazy static for metrics
lazy_static = "1.4"

[[bin]]
name = "kafka-backup-operator"
path = "src/main.rs"

[[bin]]
name = "crdgen"
path = "src/bin/crdgen.rs"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.13"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
